--- a/package.json
+++ b/package.json
@@ -1,21 +1,26 @@
 {
-  "name": "skyhome-frontend",
-  "private": true,
-  "version": "0.0.0",
-  "scripts": {
-    "dev": "vite",
-    "build": "tsc && vite build",
-    "preview": "vite preview"
-  },
-  "dependencies": {
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2"
-  },
-  "devDependencies": {
-    "@types/react": "^17.0.33",
-    "@types/react-dom": "^17.0.10",
-    "@vitejs/plugin-react": "^1.0.7",
-    "typescript": "^4.5.4",
-    "vite": "^2.8.0"
-  }
+    "name": "skyhome-frontend",
+    "private": true,
+    "version": "0.0.0",
+    "scripts": {
+        "dev": "vite",
+        "build": "tsc && vite build",
+        "preview": "vite preview"
+    },
+    "dependencies": {
+        "react": "17.0.2",
+        "react-dom": "17.0.2",
+        "react-router-dom": "6.2.1",
+        "styled-components": "5.3.3"
+    },
+    "devDependencies": {
+        "@types/react": "17.0.33",
+        "@types/react-dom": "17.0.10",
+        "@types/react-router-dom": "5.3.3",
+        "@types/styled-components": "5.1.23",
+        "@vitejs/plugin-react": "1.0.7",
+        "eslint": "8.10.0",
+        "typescript": "4.5.4",
+        "vite": "2.8.0"
+    }
 }
