--- a/package.json
+++ b/package.json
@@ -18,8 +18,11 @@
         "@types/react-dom": "17.0.10",
         "@types/react-router-dom": "5.3.3",
         "@types/styled-components": "5.1.23",
+        "@typescript-eslint/eslint-plugin": "^5.12.1",
+        "@typescript-eslint/parser": "^5.12.1",
         "@vitejs/plugin-react": "1.0.7",
         "eslint": "8.10.0",
+        "eslint-plugin-react": "^7.29.2",
         "typescript": "4.5.4",
         "vite": "2.8.0"
     }
